image stretching bug

--- a/css/qyre.webflow.css
+++ b/css/qyre.webflow.css
@@ -1963,13 +1963,17 @@ em {
     margin-bottom: 40px;
     padding-right: 20px;
     padding-left: 20px;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
   }
   .image-4 {
     min-width: 0px;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 auto;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
   }
   .image-5 {
     position: relative;
@@ -2296,6 +2300,10 @@ em {
   }
   .image-7 {
     display: block;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 auto;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
   }
 }
 
